refactor transaction retrieval to use TransactionService

--- a/pom.xml
+++ b/pom.xml
@@ -22,4 +22,15 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>  <mainClass>com.pluralsight.TheBalancingActApp</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
